ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/Payment_Request__c.object-meta.xml
<CustomObject>
    <description>Object to manage credit notes or check requests to pay home owner, customer (dealer), or a third party.</description>
    <label>Payment Request</label>
    <nameField>
        <displayFormat>PT-{00000}</displayFormat>
        <label>Payment Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>