ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Account_Address_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Address_Verification_Status__c</fullName>
    <formula>TEXT(Case__r.Account.Address_Verification_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Address Verification Status</label>
    <type>Text</type>
</CustomField>