ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Account_Name_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Name_Verification_Status__c</fullName>
    <description>This field should be removed, because it is backwards. In salesforce conventionally a checkbox is checked when the thing is true. This is the opposite.</description>
    <formula>Case__r.Account.Name_Verification_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(remove)Account Name Verification Status</label>
    <type>Checkbox</type>
</CustomField>