ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Case_Closed__c.field-meta.xml
<CustomField>
    <fullName>Case_Closed__c</fullName>
    <description>Indicate whether the Payment Request is associated with Closed Cases.
True if it is, otherwise, is false.</description>
    <formula>TEXT( Case__r.Claim_Stage__c ) == &apos;Closed&apos;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Closed?</label>
    <type>Checkbox</type>
</CustomField>