ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Conga_Payment_Request_Not_Possible__c.field-meta.xml
<CustomField>
    <fullName>Conga_Payment_Request_Not_Possible__c</fullName>
    <description>Used to run the conga DC command. The DC parameter accepts a 1 or a 0, so we need to translate the boolean.</description>
    <formula>IF( Case__r.IsClosed = true
            || CONTAINS( Parent_Contractor_Account_Verified__c, &apos;Not Verified&apos;),
            1,
            0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Payment requests can&apos;t be sent if the case is closed or the related addresses and company names haven&apos;t been verified.</inlineHelpText>
    <label>Conga: Payment Request Not Possible</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>