ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Contact_Address_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Address_Verification_Status__c</fullName>
    <formula>Case__r.Contact.Mailing_Address_Verification_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Address Verification Status</label>
    <type>Checkbox</type>
</CustomField>