ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Contact_Name_Verification_Status__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name_Verification_Status__c</fullName>
    <description>2019-04-30 Added by Slalom. This should be removed because it violates conventional Salesforce behaviour which is that a checkbox is checked when it&apos;s condition is true. Also: we don&apos;t need to do this.</description>
    <formula>Case__r.Contact.Name_Verification_Status__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>(remove)Contact Name Verification Status</label>
    <type>Checkbox</type>
</CustomField>