ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Contractor_Account_Verified__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Account_Verified__c</fullName>
    <description>Checks both the Name and the Address flags and consolidates them. Defaults to true if there is no Contractor account.</description>
    <formula>IF(ISBLANK( Case__r.Contractor__c ), true, Case__r.Contractor__r.Account_Name_Address_Verified__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Is the contractor&apos;s name and address verified?</inlineHelpText>
    <label>Contractor Account Verified?</label>
    <type>Checkbox</type>
</CustomField>