ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Credit_Number__c.field-meta.xml
<CustomField>
    <fullName>Credit_Number__c</fullName>
    <label>Check/Credit #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>