ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Customer_Mapic_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Mapic_Number__c</fullName>
    <formula>IF( (Account__r.JDE_ERP_ID__c != 0),
   TEXT( Account__r.JDE_Company__c ) +&apos;-&apos;+ TEXT(Account__r.JDE_ERP_ID__c),
   Account__r.Mapics_ERP_ID__c
)</formula>
    <label>Customer Number</label>
    <type>Text</type>
</CustomField>