ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Initial_Status_Date_Payment_Generated__c.field-meta.xml
<CustomField>
    <fullName>Initial_Status_Date_Payment_Generated__c</fullName>
    <description>CLAIMS -328. This field will be populated the first time the &apos;Status Date: Payment Document Generated&apos; field is populated by Conga. It will be used on a Rollup Sumary field on the Case object</description>
    <inlineHelpText>Populated the first time a payment request is generated and the settlement acceptance received date has to be filled in. (If the Settlement Acceptance Receive Date is empty, this will NEVER be populated.)</inlineHelpText>
    <label>Initial Status Date: Payment Generated</label>
    <type>DateTime</type>
</CustomField>