ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Parent_Account_Verified__c.field-meta.xml
<CustomField>
    <fullName>Parent_Account_Verified__c</fullName>
    <description>This defaults to true if he parent account is null.</description>
    <formula>IF(ISBLANK( Case__r.Account.ParentId ), true, Case__r.Account.Parent.Account_Name_Address_Verified__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Has the parent account been verified?</inlineHelpText>
    <label>Parent Account Verified?</label>
    <type>Checkbox</type>
</CustomField>