ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Parent_Contractor_Account_Verified__c.field-meta.xml
<CustomField>
    <fullName>Parent_Contractor_Account_Verified__c</fullName>
    <description>True if the Case&apos;s Account and it&apos;s Parent have verified addresses. False if either one of those is false. Defaults to true is the Parent is blank, because there&apos;s nothing to verify.</description>
    <formula>IF(  Parent_Account_Verified__c  = true
            &amp;&amp;  Contractor_Account_Verified__c = true,
            &apos;Both Verified&apos;,
            IF(Parent_Account_Verified__c = false &amp;&amp;  Contractor_Account_Verified__c = false , &apos;Both Not Verified&apos;,
            IF(Contractor_Account_Verified__c = false, &apos;Contractor Account Not Verified&apos;, &apos;Parent Account Not Verified&apos;))

            )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Either the Claim&apos;s Account or it&apos;s Parent needs to be validated before a payment can be sent.</inlineHelpText>
    <label>Parent &amp; Contractor Account Verified?</label>
    <type>Text</type>
</CustomField>