ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Payment_Request_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Payment_Request_Line_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Request Line Item</label>
    <referenceTo>Payment_Request_Line_Item__c</referenceTo>
    <relationshipLabel>Payment Requests</relationshipLabel>
    <relationshipName>Payment_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>