ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Second_Payee__c.field-meta.xml
<CustomField>
    <fullName>Second_Payee__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The second contact payee</description>
    <inlineHelpText>The second contact payee</inlineHelpText>
    <label>Second Payee</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Payment Requests (Second Payee)</relationshipLabel>
    <relationshipName>Second_Payee</relationshipName>
    <type>Lookup</type>
</CustomField>