ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Status_Date_Payment_Document_Generated__c.field-meta.xml
<CustomField>
    <fullName>Status_Date_Payment_Document_Generated__c</fullName>
    <description>Populated by Conga when the Request Payment button is selected.</description>
    <inlineHelpText>The date the last Payment was requested</inlineHelpText>
    <label>Status Date: Payment Document Generated</label>
    <type>DateTime</type>
</CustomField>