ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Taxes__c.field-meta.xml
<CustomField>
    <fullName>Taxes__c</fullName>
    <description>Calculates tax based on on the tax rates in the case. Needs to be divided by 100 otherwise it&apos;s very high.</description>
    <formula>IF( 
    Case__r.Taxes_Additive__c, 
    Total_of_all_Items__c * (Case__r.Tax_Rate__c + Case__r.Secondary_Tax_Rate__c), 
    Total_of_all_Items__c * Case__r.Tax_Rate__c + (Total_of_all_Items__c + (Total_of_all_Items__c * Case__r.Tax_Rate__c)) * Case__r.Secondary_Tax_Rate__c 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Tax calculation based on the rate(s) stored on the Case record</inlineHelpText>
    <label>Taxes</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>