ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/fields/Total_of_all_Items__c.field-meta.xml
<CustomField>
    <fullName>Total_of_all_Items__c</fullName>
    <label>Total of all Items</label>
    <summarizedField>Payment_Request_Line_Item__c.Amount__c</summarizedField>
    <summaryForeignKey>Payment_Request_Line_Item__c.Payment_Request__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>