ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/recordTypes/Organization.recordType-meta.xml
<RecordType>
    <fullName>Organization</fullName>
    <active>true</active>
    <description>Used for organizations, such as vendors, contractors, etc.</description>
    <label>Organization</label>
</RecordType>