ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/validationRules/ContractorAddressRequiresVerification.validationRule-meta.xml
<ValidationRule>
    <fullName>ContractorAddressRequiresVerification</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
TEXT(Account__r.Address_Verification_Status__c) &lt;&gt; &apos;Verified&apos;,
Account__r.RecordType.DeveloperName = &apos;Contractor&apos; 
)</errorConditionFormula>
    <errorMessage>The contractor&apos;s address you&apos;ve selected must be verified.</errorMessage>
</ValidationRule>