ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/validationRules/Need_Mapics_ERP_Id_Populated_for_Credit.validationRule-meta.xml
<ValidationRule>
    <fullName>Need_Mapics_ERP_Id_Populated_for_Credit</fullName>
    <active>false</active>
    <description>Mapics ERP ID field must be populated for Credit Note Type.</description>
    <errorConditionFormula>ISPICKVAL(Note_Type__c, &quot;Credit&quot;) &amp;&amp;  ISBLANK(Customer_Mapic_Number__c)</errorConditionFormula>
    <errorMessage>MAPICS ERP ID field must be populated if Note Type is Credit.</errorMessage>
</ValidationRule>