ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Payment_Request__c/validationRules/Second_Payee_Cannot_Equal_First_Payee.validationRule-meta.xml
<ValidationRule>
    <fullName>Second_Payee_Cannot_Equal_First_Payee</fullName>
    <active>true</active>
    <description>Second payee name cannot be the same as the first payee name</description>
    <errorConditionFormula>!ISBLANK( Second_Payee__c ) &amp;&amp; Second_Payee__c =  Contact__c</errorConditionFormula>
    <errorDisplayField>Second_Payee__c</errorDisplayField>
    <errorMessage>The second payee name cannot be the same as the first payee name</errorMessage>
</ValidationRule>